welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: not found: value ||
  if (day == 6 || day == 7) || vacation {
                            ^