welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
  if (day == 6 || day == 7) || vacation {
    return "off"
  }
  else {
    return "7:00"
  }
 
}